[project]
name = "horus"
version = "0.1.0"
description = "Linux security auditing tool."
requires-python = ">=3.11"
dependencies = [
    "distro>=1.9.0",
    "Jinja2>=3.1.6",
    "PyYAML>=6.0.3",
    "pytest>=9.0.2"
]

[tool.pytest.ini_options]
addopts = "-v --tb=short --disable-warnings --maxfail=1"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]